--- a/client/Tic-Tac-Toe/package.json
+++ b/client/Tic-Tac-Toe/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
+    "ngx-cookie-service": "^12.0.0",
     "ngx-socket-io": "^4.0.0",
     "popper": "^1.0.1",
     "rxjs": "~6.6.0",
