--- a/.github/workflows/main_TicTacToeGameYF.yml
+++ b/.github/workflows/main_TicTacToeGameYF.yml
@@ -25,6 +25,8 @@ jobs:
       run: |
         npm install
         npm run build --prod
+          env:
+     CI: false
       working-directory: .
 
     - name: Upload artifact for deployment job
