--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\"",
-    "start": "NODE_ENV=production node ./server/server"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run build"
   },
   "author": "",
   "license": "ISC",
