--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +14,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^4.1.2"
-  }
+  },
+  "engines": { "node": "14.15.1" }
 }
