--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: false
  
 branches:
   only:
-  - master
+  - main
  
 cache:
   directories:
@@ -17,4 +17,4 @@ deploy:
   keep-history: true
   api-key:
     secure: $HEROKU_API_KEY
-  app: online-judge-api
+  app:  Tic-Tac-Toe-Game
